--- a/實搭.html
+++ b/實搭.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
-<!--
-Created using JS Bin
-http://jsbin.com
 
-Copyright (c) 2014 by anonymous (http://jsbin.com/rujehucati/1/edit)
 
-Released under the MIT license: http://jsbin.mit-license.org
--->
 <meta name="robots" content="noindex">
 <html>
-<hea
+<head>
   <meta charset="utf-8">
   <title>實搭畫面</title>
 <link rel = "stylesheet" href = "index.css實搭">
