--- a/主題.html
+++ b/主題.html
@@ -5,33 +5,15 @@
 <head>
   <meta charset="utf-8">
   <title>主題搭配</title>
-<style id="jsbin-css">
-.html{
-  background-color:white;
-}
-.theme{
-  font-size:50px;
-  font-family:SimSun;
-  position:absolute;
-  top:50px;
-  left:550px;
-}
-.sweater{
-  height:400px;
-  position:absolute;
-  top:150px;
-  left:450px;
-}
-.Sweater{
-  font-size:40px;
-  font-family:SimSun;
-  position:absolute;
-  top:580px;
-  left:550px;
-}
-</style>
+
+    <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+    <!--[if IE]>
+        <link href="stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <![endif]-->
+
 </head>
-<body>
+<body id = "topic">
   <span class="theme">主題搭配</span>
   <img class="sweater" src="http://images.cdn.bigcartel.com/bigcartel/product_images/129139086/max_h-1000+max_w-1000/unicorn-sweater.jpg"/>
   <span class="Sweater">-圖案衛衣-</span>
