--- a/index.html
+++ b/index.html
@@ -5,101 +5,13 @@
 <head>
   <meta charset="utf-8">
   <title>專案版型</title>
-<style id="jsbin-css">
-html{
-  background-color:white;
-}
-body{
-  margin-left:400px;
-}
-span{
-  margin-left:400px;
-}
-.note4{
-  font-size: 26px;
-  position:absolute;
-  top:450px;
-  left:300px;
-  z-index:1;
-}
-.note3{
-  font-size: 26px;
-  position:absolute;
-  top:450px;
-  left:50px;
-  z-index:1;
-}
-.note2{
-  font-size: 26px;
-  position:absolute;
-  top:100px;
-  left:300px;
-  z-index:1;
-}
-.note {
-  font-size: 26px;
-  position:absolute;
-  top:100px;
-  left:50px;
-  z-index:1;
-  
-}
-.front {
-  position:relative;
-  z-index:1;
-}
-.circle{
-  width:150px;
-  height:150px;
-  border-radius:150px;
-  margin-top:-400px;
-  margin-left:150px;
-  background-color:black;
-}
-.style{
-  width:200px;
-  height:300px;
-  opacity:0.6;
- 
-}
-.one{
-  width:200px;
-  height:300px;
-  border:3px solid;
-  
-}
-.two{
-  width:200px;
-  height:300px;
-  border:3px solid;
-  margin-left:250px;
-  margin-top:-305px;
-
-}
-.three{
-  width:200px;
-  height:300px;
-  border:3px solid;
-  margin-top:40px;
-}
-.four{
-  width:200px;
-  height:300px;
-  border:3px solid;
-  margin-left:250px;
-  margin-top:-305px;
-}
-.choose{
-  color:white;
-  font-size: 10px;
-  position:absolute;
-  top:335px;
-  left:183px;
-  z-index:1;
-}
-</style>
+    <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+    <!--[if IE]>
+        <link href="stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <![endif]-->
 </head>
-<body>
+<body id = "index">
  <div class = "one" id ="oneforone" >
   
    <span class ="note">Catagory1</span>
