--- a/實搭.html
+++ b/實搭.html
@@ -6,12 +6,15 @@
 <head>
   <meta charset="utf-8">
   <title>實搭畫面</title>
-<link rel = "stylesheet" href = "index.css實搭">
-<style id="jsbin-css">
 
-</style>
+	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!--[if IE]>
+      <link href="stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <![endif]-->
+
 </head>
-<body>
+<body id = "detail">
   <span class="Catagory">Catagory</span>
 <img class="midph" src="http://cdn1-www.thefashionspot.com/assets/uploads/gallery/street-style-coat-trends-fall-2013/milan-streetstyle-fall-2013_red2.jpg"/>
   <div class="choose"></div>
