organized into index.html + screen.sass

--- a/實搭畫面.html
+++ b/實搭畫面.html
@@ -9,9 +9,9 @@ Released under the MIT license: http://jsbin.mit-license.org
 -->
 <meta name="robots" content="noindex">
 <html>
-<hea
-  <meta charset="utf-8">
+<meta charset="utf-8"/>
   <title>實搭畫面</title>
+  
 <style id="jsbin-css">
 html{
   background-color:white;
